CHANGES
=======

chan_capi-1.1.3
------------------
- fixed buffer length error with internal libcapi debug code.
- performance optimizations, use debug code when needed only.
- added commands for media features supported by Dialogic(R) Diva(R) Media Boards
- added variable CAPI_CIP for full access to all bearer capabilities.
- fixed CAPI 'chat' for using more than 8 controllers.
- fixed CAPI 'chat' for not exceeding maximal size of CAPI message
- add color fax
- add autodetection of fax file format for sendfax command (SFF, CFF JPEG, CFF T.43, TEXT)
- add extension for FAX paper formats and resolutions
- adjust NULL PLCI LI path
- add resource PLCI
- add echocancelpath configuration option
- fixed possible race condition while waiting for DISCONNECT_CONF
- add static half duplex conference
- add dynamic half duplex conference
- add clear channel fax
- add DTMF detection for NULL PLCI
- use direct access to vocoders without RTP framing
- play message to conference and music on hold to caller
- add commands to remove users from chat
- allow to specity the 'ETS 300 102-1' called party number octet 3
- fixed possible buffer overflow in 'deflect'
- added 'h' option to chat to auto-hangup caller if alone in conference too long


chan_capi-1.1.2
------------------
- added config setting 'faxdetecttime' to limit the fax detection for a given amount of seconds.
- added config option for subscriber prefix. Some lines may show local calls without area code
  signaled as subscriber-number. Here the complete prefix including area code must be added.
- better counting of active B-channels.
- make capicommand(progress) "early-B3" usable for non NT-mode incoming channels as well.
- support early Line-Interconnect (bridge) as soon as both B-channels are up. This bridges B-channels
  from beginning of the call-establishment, even before calls are connected and the bridge command is received.
  The dial() option 'G' is used to activate this feature.