@@ -219,9 +219,12 @@ The reception of the fax message is started using 'receivefax' capi command:
     'stationid' - station ID, optional
     'headline'  - head line, optional
     'options'   - fax options, optional
+                  'X' - use fax T.30 extended (default)
+                  'x' - do not use fax T.30 extended
                   'k' - keep fax document in case of errors (by default document is removed
                         if fax transmission was not completed with success).
-                  'f' - allow Fine resolution
+                  'f' - allow Fine resolution (default)
+                  'F' - do not use Fine resolution
                   'u' - activate support for Super/Ultra fine resolutions and paper formats
                   'j' - enable JPEG coding
                   'b' - enable T.43 coding
@@ -284,6 +287,8 @@ The transmission of the fax message is started using 'sendfax' capi command:
     'stationid' - station ID, optional
     'headline'  - head line, optional
     'options'   - fax options, optional
+                  'X' - use fax T.30 extended (default)
+                  'x' - do not use fax T.30 extended
                   'f' - use Fine resolution
                   'u' - activate support for Super/Ultra fine resolutions and paper formats
                   't' - do not use T.85
