@@ -148,6 +148,7 @@ static inline unsigned int read_capi_dword(void *m)
 #define CC_BPROTO_FAXG3         1
 #define CC_BPROTO_RTP           2
 #define CC_BPROTO_VOCODER       3
+#define CC_BPROTO_FAX3_BASIC    4
 
 /* FAX Resolutions */
 #define FAX_STANDARD_RESOLUTION         0
@@ -609,6 +610,7 @@ struct cc_capi_controller {
 
 	int divaExtendedFeaturesAvailable;
 	int ecPath;
+	int fax_t30_extended;
 };
 
 
