@@ -389,8 +389,8 @@ static struct capichat_s *add_chat_member(char *roomname, struct capi_pvt *i, ro
 			room_mode  = tmproom->room_mode;
 			break;
 		} else {
-			if (tmproom->number == roomnumber) {
-				roomnumber++;
+			if (tmproom->number >= roomnumber) {
+				roomnumber = tmproom->number + 1;
 			}
 		}
 		tmproom = tmproom->next;
@@ -399,7 +399,7 @@ static struct capichat_s *add_chat_member(char *roomname, struct capi_pvt *i, ro
 	room->number = roomnumber;
 	room->room_mode = room_mode;
 
-	for (tmproom = chat_list; tmproom != 0; tmproom = tmproom->next) {
+	for (tmproom = chat_list; tmproom != NULL; tmproom = tmproom->next) {
 		if (tmproom->number == roomnumber) {
 			tmproom->info &= ~PBX_CHAT_MEMBER_INFO_RECENT;
 		}
