@@ -1,6 +1,11 @@
 CHANGES
 =======
 
+HEAD
+------------------
+- use extended fax if available only and have fine resolution on receive activated by default
+- fixed chat error on creating third chat-room
+
 chan_capi-1.1.3
 ------------------
 - fixed buffer length error with internal libcapi debug code.
